# poggers

./: .gitignore  Cargo.toml  README.md
macos-libproc/: Cargo.toml  build.rs  cargo.toml
macos-libproc/src/: lib.rs  main.rs
macos-tests/: Cargo.toml
macos-tests/src/: main.rs
poggers/: Cargo.toml
poggers-derive/: Cargo.toml
poggers-derive/src/: lib.rs
poggers/src/: lib.rs  sigscan.rs  testing.rs  traits.rs
poggers/src/structures/: mod.rs  virtalloc.rs
poggers/src/structures/modules/: mod.rs
poggers/src/structures/proc_list/implement/: linux.rs  mac.rs  mod.rs  windows.rs
poggers/src/structures/process/implement/: utils.rs
poggers/src/structures/process/implement/linux/: external.rs  internal.rs  mod.rs
poggers/src/structures/process/implement/mac/: external.rs  mod.rs
poggers/src/structures/process/implement/win32/: external.rs  internal.rs  mod.rs
rw-test/: Cargo.toml
rw-test/src/: main.rs
src/: exports.rs  lib.rs  sigscan.rs  structures.rs  traits.rs
src/internal/: mod.rs  utils.rs
src/internal/windows/: mod.rs  module.rs
src/mem/: mod.rs  sigscan.rs  structures.rs  traits.rs  utils.rs
src/mem/internal/: mod.rs  module.rs  utils.rs
src/mem/internal/windows/: mod.rs  module.rs
src/mem/windows/: external.rs  mod.rs
src/structures/: create_snapshot.rs  mod.rs  protections.rs  virtalloc.rs
src/structures/addr/: mod.rs
src/structures/modules/: implement.rs  mod.rs
src/structures/proc_list/: mod.rs
src/structures/proc_list/implement/: mac.rs  mod.rs  windows.rs
src/structures/proc_list/implement/win32/: mod.rs
src/structures/process/: mod.rs
src/structures/process/implement/: external.rs  internal.rs  mod.rs  utils.rs
src/structures/process/implement/linux/: external.rs  internal.rs  mod.rs
src/structures/process/implement/mac/: external.rs  internal.rs
src/structures/process/implement/win32/: external.rs  internal.rs  mod.rs
