[package]
name = "poggers"
version = "0.1.1-dev2"
edition = "2021"
description = "memory lib"
license = "GPL-2.0"
authors = ["luna <luna@aixeria.com>","VilotStar <macbookairuser12@priest.com>"]
repository = "https://github.com/pozm/poggers"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["poggers-derive"]

[dependencies]
windows = {version = "0.43.0",features = [
    "Win32_System_Threading","Win32_Foundation","Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_Console",
    "Win32_System_SystemServices"
], optional = true}
libc = {version = "0.2.139", optional = true}
mach = {version = "0.3.2", optional = true}
anyhow = "1.0.65"
thiserror = "1.0.35"
log = "0.4.17"
poggers-derive = {path="./poggers-derive", version="0.1.1-dev4"}

[features]
default = ["win"]
linux = ["libc","poggers-derive/linux"]
macos = ["mach","poggers-derive/macos"]
win = ["windows"]
