[package]
name = "poggers"
version = "0.3.3"
edition = "2021"
description = "memory lib"
license = "GPL-2.0"
authors = ["luna <luna@aixeria.com>","VilotStar <macbookairuser12@priest.com>"]
repository = "https://github.com/pozm/poggers"
readme = "README.md"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc","x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["poggers-derive"]

[dependencies]
anyhow = "1.0.68"
thiserror = "1.0.38"
log = "0.4.17"

[target.'cfg(target_os="windows")'.dependencies]
windows = {version = "0.46.0",features = [
    "Win32_System_Threading","Win32_Foundation","Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_Console",
    "Win32_System_SystemServices"
]}
[target.'cfg(target_os="linux")'.dependencies]
libc = {version = "0.2.139"}
ctor = {version = "0.1.26"}
[target.'cfg(target_os="macos")'.dependencies]
mach = {version = "0.3.2"}
