[package]
name = "macos-libproc"
version = "0.1.0"
edition = "2021"
description = "libproc for macos. primarily meant for poggers."
license = "GPL-2.0"
authors = ["luna <luna@aixeria.com>", "VilotStar <macbookairuser12@priest.com>"]
repository = "https://github.com/pozm/poggers"

[package.metadata.docs.rs]
targets = ["aarch64-apple-darwin"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.68.1"
