[package]
name = "poggers-derive"
version = "0.1.1-dev4"
edition = "2021"
description = "traits for poggers"
license = "GPL-2.0"
authors = ["luna <luna@aixeria.com>","VilotStar <macbookairuser12@priest.com>"]
repository = "https://github.com/pozm/poggers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2= "1.0.43"
quote = "1.0.21"
syn = {version = "1.0.99", features = ["full"]}
proc-macro-crate = "1.2.1"
ctor = {version = "0.1.23", optional = true}

[features]
default = ["win"]
win = []
linux = ["ctor"]
macos = ["ctor"]