[package]
name = "poggers-derive"
version = "0.1.5"
edition = "2021"
description = "traits for poggers"
license = "GPL-2.0"
authors = ["luna <luna@aixeria.com>","VilotStar <macbookairuser12@priest.com>"]
repository = "https://github.com/pozm/poggers"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc","x86_64-unknown-linux-gnu"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2= "1.0.67"
quote = "1.0.33"
syn = {version = "2.0.37", features = ["full"]}
proc-macro-crate = "1.3.1"